--- a/src/app/pages/private/tab1/tab1.page.html
+++ b/src/app/pages/private/tab1/tab1.page.html
@@ -3,6 +3,11 @@
     <ion-title>
       EXAMPLE
     </ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="logOut()">
+        <ion-icon name="log-out-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>  
   </ion-toolbar>
 </ion-header>
 
