--- a/src/app/pages/private/tab2/tab2.page.html
+++ b/src/app/pages/private/tab2/tab2.page.html
@@ -1,5 +1,47 @@
 <app-header [title]="title"></app-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="ion-padding">
+
+    <ion-fab slot="fixed" horizontal="end" vertical="bottom">
+        <ion-fab-button id="open-modal" expand="block">
+            <ion-icon name="add"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
+
+    <h1>Vacances</h1>
+
+    <ion-list>
+        @for (v of vacances; track $index) {
+            <ion-card>
+                <ion-card-header>
+                  <ion-card-title>{{v.nom}}</ion-card-title>
+                  <ion-card-subtitle>{{v.preu}}</ion-card-subtitle>
+                </ion-card-header>
+              
+                <ion-card-content>
+                    {{v.descripcio}}
+                </ion-card-content>
+              </ion-card>
+        }    
+    </ion-list>
+
+
+    <ion-modal trigger="open-modal" (willDismiss)="onWillDismiss($event)">
+        <ng-template>
+          <ion-header>
+            <ion-toolbar>
+              <ion-buttons slot="start">
+                <ion-button (click)="cancel()">Cancel</ion-button>
+              </ion-buttons>
+              <ion-title>Nova Vacança</ion-title>
+            </ion-toolbar>
+          </ion-header>
+          <ion-content class="ion-padding">
+
+            <app-vacanca-form [buttonName]="'Afegir'" (outVacanca)="addVacanca($event)"></app-vacanca-form>
+
+          </ion-content>
+        </ng-template>
+      </ion-modal>
 
 </ion-content>
