--- a/src/app/shared/vacanca-form/vacanca-form.component.html
+++ b/src/app/shared/vacanca-form/vacanca-form.component.html
@@ -4,7 +4,6 @@
         Preu: <input type="text" formControlName="preu"><br>
         descripcio: <input type="text" formControlName="descripcio"><br>
         actiu: <input type="checkbox" formControlName="actiu"><br>
-        user: <input type="text" formControlName="user"><br>
-        <button mat-flat-button color="primary" (click)=outputVacanca()>{{buttonName}}</button>
+        <ion-button (click)=outputVacanca()>{{buttonName}}</ion-button>
     </div>
 </form>
