--- a/src/app/pages/private/tab2/tab2.page.html
+++ b/src/app/pages/private/tab2/tab2.page.html
@@ -19,7 +19,12 @@
                 </ion-card-header>
               
                 <ion-card-content>
-                    {{v.descripcio}}
+                  <ion-item>
+                    <ion-thumbnail slot="start">
+                      <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
+                    </ion-thumbnail>
+                    <ion-label>{{v.descripcio}}</ion-label>
+                  </ion-item>
                 </ion-card-content>
               </ion-card>
         }    
