--- a/src/app/pages/public/login/login.page.html
+++ b/src/app/pages/public/login/login.page.html
@@ -18,10 +18,10 @@
   @if (credentials !== undefined) {
     <form (ngSubmit)="login()" [formGroup]="credentials">
       <ion-item fill="solid" class="ion-margin-bottom">
-        <input type="email" placeholder="Email" formControlName="email"/>
+        <ion-input type="email" placeholder="Email" formControlName="email"/>
       </ion-item>
       <ion-item fill="solid" class="ion-margin-bottom">
-        <input type="password" placeholder="Password" formControlName="password"/>
+        <ion-input type="password" placeholder="Password" formControlName="password"/>
       </ion-item>
   
       <ion-button type="submit" expand="block">Log in</ion-button>
