--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>
       {{title}}
     </ion-title>
@@ -10,6 +13,6 @@
       <ion-button (click)="logOut()">
         <ion-icon name="log-out-outline"></ion-icon>
       </ion-button>
-    </ion-buttons>  
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
